--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 30px;">Get in Touch</h1> 
                 <div class="col-lg-6 mx-auto"> 
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                        <a href="../My_Portfolio/Kowakski's_portfolio.html">
+                        <a href="Kowakski's_portfolio.html">
                             <button type="button" class="btn btn-dark btn-lg px-4 gap-3">Contact me</button> 
                         </a>
                     </div> 
@@ -87,4 +87,5 @@
         <p class="copyright">© Myat Kaung Kyaw</p>
     </div>
 </body>
+
 </html>
