--- a/Kowakski's_portfolio.html
+++ b/Kowakski's_portfolio.html
@@ -98,7 +98,8 @@
     <div class="box">
         <h4 ><a href="./hobby.html"> Check Out My Hobbies </a></h4>
         <h4 ><a href="./contact.html">Here Is My Contact </a></h4>
-        <h4 ><a href="../My_Portfolio1.0/index.html">Here Is My Portfolio </a></h4>
+        <h4 ><a href="./index.html">Here Is My Portfolio </a></h4>
     </div>
 </body>
+
 </html>
